--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,8 +1,11 @@
+<h1>Hola {{name}}</h1>
+
 <form id="form">
   <label>
     Nombre del producto
     <input type="text" name="title" />
   </label>
+  <button type="submit">Send</button>
 </form>
 
 <div id="productsList"></div>
