--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -61,3 +61,10 @@ input {
   color: rgb(29, 93, 43);
   font-size: 20px;
 }
+
+.card_container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+}
