--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,10 +1,12 @@
 <section>
   <h1 class="title">Product List</h1>
-  {{#each products}}
-    <div class="card">
-      <p><b>Title:</b> {{this.title}}</p>
-      <p><b>Description:</b> {{this.description}}</p>
-      <p><b>Price</b>: ${{this.price}}</p>
-    </div>
-  {{/each}}
+  <div class="card_container">
+    {{#each products}}
+      <div class="card">
+        <p><b>Title:</b> {{this.title}}</p>
+        <p><b>Description:</b> {{this.description}}</p>
+        <p><b>Price</b>: ${{this.price}}</p>
+      </div>
+    {{/each}}
+  </div>
 </section>
